tests/tests/ui/column_type_alias_shadowing.stderr
error[E0277]: field type `u32` is not compatible with the requested column storage `toasty::codegen_support::storage::tag::Text`
  --> tests/ui/column_type_alias_shadowing.rs:17:11
   |
17 |     name: String,
   |           ^^^^^^ incompatible Rust type for `#[column(type = ...)]`
   |
   = note: see `toasty::codegen_support::storage` for the compatibility table
help: the trait `CompatibleWith<toasty::codegen_support::storage::tag::Text>` is not implemented for `u32`
      but trait `CompatibleWith<toasty::codegen_support::storage::tag::U32>` is implemented for it
  --> $WORKSPACE/crates/toasty/src/codegen_support/storage.rs
   |
   | impl CompatibleWith<tag::U32> for u32 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `toasty::codegen_support::storage::tag::U32`, found `toasty::codegen_support::storage::tag::Text`
note: required by a bound in `_check`
  --> tests/ui/column_type_alias_shadowing.rs:10:17
   |
10 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `_check`
...
17 |     name: String,
   |           ------ required by a bound in this function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
